source/_base.scss
html, body {
    overflow: hidden;
    touch-action: pan-y;
    position: relative;
}

body {
    margin: 0;
}

#fork-corner {
    z-index: 105;
    position: absolute;
}

// small corner size
.fork-corner {
    &.fc-size-small {
        // top right controller
        &.fc-pos-tr {
            top: $small-corner-size/12;
            right: $small-corner-size/12;

            & + div {
                top: ($small-corner-size/2) - $small-corner-size;
                right: ($small-corner-size/2) - $small-corner-size;
            }
        }
        // top left controller
        &.fc-pos-tl {
            top: $small-corner-size/12;
            left: $small-corner-size/12;

            & + div {
                top: ($small-corner-size/2) - $small-corner-size;
                left: ($small-corner-size/2) - $small-corner-size;
            }
        }
        // bottom right controller - small size
        &.fc-pos-br {
            bottom: $small-corner-size/12;
            right: $small-corner-size/12;

            & + div {
                bottom: ($small-corner-size/2) - $small-corner-size;
                right: ($small-corner-size/2) - $small-corner-size;
            }
        }
        // top left controller - small size
        &.fc-pos-bl {
            bottom: $small-corner-size/12;
            left: $small-corner-size/12;

            & + div {
                bottom: ($small-corner-size/2) - $small-corner-size;
                left: ($small-corner-size/2) - $small-corner-size;
            }
        }
        // corner theme
        &.fc-theme-default > i,
        &.fc-theme-github > i,
        &.fc-theme-gitlab > i,
        &.fc-theme-bitbucket > i {
            font-size: $small-corner-size/4;
        }
        // corner element
        & + div {
            width: $small-corner-size;
            height: $small-corner-size;
        }
    }
}

// medium corner size
.fork-corner {
    &.fc-size-medium {
        // top right controller - medium
        &.fc-pos-tr {
            top: $medium-corner-size/12;
            right: $medium-corner-size/12;

            & + div {
                top: ($medium-corner-size/2) - $medium-corner-size;
                right: ($medium-corner-size/2) - $medium-corner-size;
            }
        }
        // top left controller - medium size
        &.fc-pos-tl {
            top: $medium-corner-size/12;
            left: $medium-corner-size/12;

            & + div {
                top: ($medium-corner-size/2) - $medium-corner-size;
                left: ($medium-corner-size/2) - $medium-corner-size;
            }
        }
        // bottom right controller - medium size
        &.fc-pos-br {
            bottom: $medium-corner-size/12;
            right: $medium-corner-size/12;

            & + div {
                bottom: ($medium-corner-size/2) - $medium-corner-size;
                right: ($medium-corner-size/2) - $medium-corner-size;
            }
        }
        // bottom left controller - medium size
        &.fc-pos-bl {
            bottom: $medium-corner-size/12;
            left: $medium-corner-size/12;

            & + div {
                bottom: ($medium-corner-size/2) - $medium-corner-size;
                left: ($medium-corner-size/2) - $medium-corner-size;
            }
        }
        // corner theme
        &.fc-theme-default > i,
        &.fc-theme-github > i,
        &.fc-theme-gitlab > i,
        &.fc-theme-bitbucket > i {
            font-size: $medium-corner-size/4;
        }
        // corner element
        & + div {
            width: $medium-corner-size;
            height: $medium-corner-size;
        }
    }
}

// large corner size
.fork-corner {
    &.fc-size-large {
        // top right controller - large size
        &.fc-pos-tr {
            top: $large-corner-size/12;
            right: $large-corner-size/12;

            & + div {
                top: ($large-corner-size/2) - $large-corner-size;
                right: ($large-corner-size/2) - $large-corner-size;
            }
        }
        // top left controller - large size
        &.fc-pos-tl {
            top: $large-corner-size/12;
            left: $large-corner-size/12;

            & + div {
                top: ($large-corner-size/2) - $large-corner-size;
                left: ($large-corner-size/2) - $large-corner-size;
            }
        }
        // bottom right controller - large size
        &.fc-pos-br {
            bottom: $large-corner-size/12;
            right: $large-corner-size/12;

            & + div {
                bottom: ($large-corner-size/2) - $large-corner-size;
                right: ($large-corner-size/2) - $large-corner-size;
            }
        }
        // bottom left controller - large size
        &.fc-pos-bl {
            bottom: $large-corner-size/12;
            left: $large-corner-size/12;

            & + div {
                bottom: ($large-corner-size/2) - $large-corner-size;
                left: ($large-corner-size/2) - $large-corner-size;
            }
        }
        // corner theme
        &.fc-theme-default > i,
        &.fc-theme-github > i,
        &.fc-theme-gitlab > i,
        &.fc-theme-bitbucket > i {
            font-size: $large-corner-size/4;
        }
        // corner element
        & + div {
            width: $large-corner-size;
            height: $large-corner-size;
        }
    }
}

.fork-corner + div {
    position: absolute;
    width: $default-corner-size;
    height: $default-corner-size;
    z-index: 100;
}

.fork-corner {
    // top right controller
    &.fc-pos-tr {
        top: $default-corner-size/12;
        right: $default-corner-size/12;

        &.fc-animate-default {
            transition: 0.5s;
            &:hover {
                transform: rotate(45deg);
                transition: 0.5s;
            }
        }
    }
    // top right element
    &.fc-pos-tr + div {
        top: ($default-corner-size/2) - $default-corner-size;
        right: ($default-corner-size/2) - $default-corner-size;
        transform: rotate(45deg);
    }
    // top left controller
    &.fc-pos-tl {
        top: $default-corner-size/12;
        left: $default-corner-size/12;

        &.fc-animate-default {
            transition: 0.5s;
            &:hover {
                transform: rotate(-45deg);
                transition: 0.5s;
            }
        }
    }
    // top left element
    &.fc-pos-tl + div {
        top: ($default-corner-size/2) - $default-corner-size;
        left: ($default-corner-size/2) - $default-corner-size;
        transform: rotate(45deg);
    }
    // bottom right controller
    &.fc-pos-br {
        bottom: $default-corner-size/12;
        right: $default-corner-size/12;

        &.fc-animate-default {
            transition: 0.5s;
            &:hover {
                transform: rotate(45deg);
                transition: 0.5s;
            }
        }
    }
    // bottom right element
    &.fc-pos-br + div {
        bottom: ($default-corner-size/2) - $default-corner-size;
        right: ($default-corner-size/2) - $default-corner-size;
        transform: rotate(45deg);
    }
    // bottom left controller
    &.fc-pos-bl {
        bottom: $default-corner-size/12;
        left: $default-corner-size/12;

        &.fc-animate-default {
            transition: 0.5s;
            &:hover {
                transform: rotate(-45deg);
                transition: 0.5s;
            }
        }
    }
    // bottom left element
    &.fc-pos-bl + div {
        bottom: ($default-corner-size/2) - $default-corner-size;
        left: ($default-corner-size/2) - $default-corner-size;
        transform: rotate(45deg);
    }
}

// default theme
.fork-corner {
    &.fc-theme-default {
        text-decoration: none;
        > i {
            font-size: $default-corner-size/4;
            color: $default-icon-color;
        }
    }
    &.fc-theme-default + div {
        background-color: $default-bg-color;
    }
}

// github theme
.fork-corner {
    &.fc-theme-github {
        text-decoration: none;
        > i {
            font-size: $default-corner-size/4;
            color: $github-icon-color;
        }
    }
    &.fc-theme-github + div {
        background-color: $github-bg-color;
    }
}

// gitlab theme
.fork-corner {
    &.fc-theme-gitlab {
        text-decoration: none;
        > i {
            font-size: $default-corner-size/4;
            color: $gitlab-icon-color;
        }
    }
    &.fc-theme-gitlab + div {
        background-color: $gitlab-bg-color;
    }
}

// bitbucket theme
.fork-corner {
    &.fc-theme-bitbucket {
        text-decoration: none;
        > i {
            font-size: $default-corner-size/4;
            color: $bitbucket-icon-color;
        }
    }
    &.fc-theme-bitbucket + div {
        background-color: $bitbucket-bg-color;
    }
}

